final cleanup. remove console.log comment functions. fix minor styling issues add iframe z-index

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -30,7 +30,7 @@ $font-bold: 700;
 
 // global
 $break-768: 768px;
-
+$z-base: 1;
 $spacing: 1rem;
 $global-line-height: 1.2;
 $default-scale-up: 1.1;
