--- a/styles/ui/_player.scss
+++ b/styles/ui/_player.scss
@@ -2,5 +2,6 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: $z-base;
   width: 100%;
 }
